# api

./: .dockerignore  .env.example  .gitignore  .tool-versions  AGENTS.md  Dockerfile  README.md  docker-entrypoint.sh  fly.toml  issues.md  mix.exs  pyproject.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  publish-image.yml  run-static-analysis.yml
alembic/: env.py
alembic/versions/: 0001_create_users.py  0002_create_roles.py  0003_create_permissions.py
app/: auth.py  auth_deps.py  config.py  db.py  jobs.py  main.py  models.py  permissions_catalogue.py  queue.py  usernames.py
app/api/v1/: jobs.py  permissions.py  roles.py  router.py  schemas.py
assets/css/: app.css
assets/js/: app.js
config/: config.exs  credentials.yml.enc  dev.exs  prod.exs  runtime.exs  test.exs
lib/: fortymm_api.ex  fortymm_api_web.ex
lib/fortymm_api/: accounts.ex  application.ex  mailer.ex  release.ex  repo.ex
lib/fortymm_api/accounts/: scope.ex  user.ex  user_notifier.ex  user_token.ex
lib/fortymm_api_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/fortymm_api_web/components/: core_components.ex  layouts.ex
lib/fortymm_api_web/controllers/: error_html.ex  (+8 more)
priv/repo/: seeds.exs
test/: test_helper.exs
test/fortymm_api/: accounts_test.exs
test/fortymm_api_web/: user_auth_test.exs
test/support/: conn_case.ex  data_case.ex
tests/: conftest.py  factories.py  test_jobs.py  test_permissions.py  test_ping.py  test_role_members.py  test_roles.py  test_session.py
(+19 files in other folders)
